--- a/BeanCount/Base.lproj/Main.storyboard
+++ b/BeanCount/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11185.3" systemVersion="16A270f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7gV-xy-tFl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11185.3" systemVersion="16A270f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="E6J-eg-3vU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11151.4"/>
@@ -455,13 +455,15 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StudentTableCell" rowHeight="56" id="MMN-oc-afT" customClass="StudentTableViewCell" customModule="BeanCount" customModuleProvider="target">
                                 <frame key="frameInset" minY="92" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MMN-oc-afT" id="GSP-Zt-pKU">
-                                    <frame key="frameInset" width="375" height="55"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="MMN-oc-afT" id="GSP-Zt-pKU">
+                                    <frame key="frameInset" width="375" height="55.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ztG-v9-eyL">
+                                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ztG-v9-eyL">
+                                            <frame key="frameInset" width="1000" height="1000"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LPQ-Cf-cEh" customClass="FillButtonView" customModule="BeanCount" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LPQ-Cf-cEh" customClass="FillButtonView" customModule="BeanCount" customModuleProvider="target">
+                                                    <frame key="frameInset" width="1000" height="1000"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="LPQ-Cf-cEh" secondAttribute="height" multiplier="1:1" id="0N5-Z6-zX7"/>
@@ -503,12 +505,15 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="7gV-xy-tFl" kind="show" identifier="SegueToAddStudent" id="fdc-NJ-2TY"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m5J-n4-vzb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3605.5999999999999" y="-995.35232383808102"/>
         </scene>
-        <!--Add Student View Controller-->
+        <!--Add Student-->
         <scene sceneID="BoZ-KY-NLF">
             <objects>
                 <viewController id="7gV-xy-tFl" customClass="AddStudentViewController" customModule="BeanCount" customModuleProvider="target" sceneMemberID="viewController">
@@ -520,23 +525,130 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akG-Fp-U1F">
-                                <frame key="frameInset" minX="78" minY="234" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j3L-j8-XxW">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="WZM-YK-E2z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
+                            </textField>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VT2-wM-tvQ">
+                                <connections>
+                                    <segue destination="4LW-s7-tGd" kind="embed" id="Plr-ZY-h7X"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="j3L-j8-XxW" firstAttribute="leading" secondItem="GIy-Np-DZy" secondAttribute="leadingMargin" id="1Bm-8v-iJj"/>
+                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="leading" secondItem="GIy-Np-DZy" secondAttribute="leading" id="cme-7D-zlS"/>
+                            <constraint firstItem="j3L-j8-XxW" firstAttribute="trailing" secondItem="GIy-Np-DZy" secondAttribute="trailingMargin" id="i0P-CD-dVd"/>
+                            <constraint firstItem="j3L-j8-XxW" firstAttribute="top" secondItem="WxP-yQ-b4g" secondAttribute="bottom" constant="45" id="lao-OY-jxv"/>
+                            <constraint firstAttribute="trailing" secondItem="VT2-wM-tvQ" secondAttribute="trailing" id="otW-7A-1Vj"/>
+                            <constraint firstItem="JDn-eG-aND" firstAttribute="top" secondItem="VT2-wM-tvQ" secondAttribute="bottom" id="tjy-Ke-wUt"/>
+                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="top" secondItem="j3L-j8-XxW" secondAttribute="bottom" constant="8" id="zvr-3z-1Fe"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Add Student" id="LPz-vf-LFG"/>
                     <connections>
-                        <outlet property="typeLabel" destination="akG-Fp-U1F" id="KUv-Oa-bKk"/>
+                        <outlet property="studentNameField" destination="j3L-j8-XxW" id="xPn-56-VXY"/>
+                        <segue destination="Hq0-86-pMD" kind="unwind" identifier="UnwindToStudentsTableView" unwindAction="unwindToStudentsTableViewWithSegue:" id="tFh-jA-O6S"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SNs-Eh-sgg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Hq0-86-pMD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4732" y="-929"/>
+            <point key="canvasLocation" x="4504.8000000000002" y="-996.25187406296857"/>
+        </scene>
+        <!--Student Tags Table View Controller-->
+        <scene sceneID="TwQ-8S-Blf">
+            <objects>
+                <tableViewController id="4LW-s7-tGd" customClass="StudentTagsTableViewController" customModule="BeanCount" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="49" sectionHeaderHeight="28" sectionFooterHeight="28" id="VrE-Ag-sro">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="509"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StudentTagCell" rowHeight="49" id="8Mq-G7-uGx" customClass="StudentTagTableViewCell" customModule="BeanCount" customModuleProvider="target">
+                                <frame key="frameInset" minY="28" width="375" height="49"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Mq-G7-uGx" id="xDz-oy-nTr">
+                                    <frame key="frameInset" width="375" height="48"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bNQ-ML-sPT">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="41" id="fAB-Nt-lB7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="bNQ-ML-sPT" firstAttribute="top" secondItem="xDz-oy-nTr" secondAttribute="top" constant="4" id="1CS-Jg-r1V"/>
+                                        <constraint firstAttribute="bottom" secondItem="bNQ-ML-sPT" secondAttribute="bottom" constant="4" id="dzT-oG-UNd"/>
+                                        <constraint firstAttribute="trailing" secondItem="bNQ-ML-sPT" secondAttribute="trailing" constant="16" id="mWX-Bh-xNr"/>
+                                        <constraint firstItem="bNQ-ML-sPT" firstAttribute="leading" secondItem="xDz-oy-nTr" secondAttribute="leading" constant="16" id="uCR-Sf-Wds"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="mainTextField" destination="bNQ-ML-sPT" id="gde-f4-3Cu"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddTagCell" rowHeight="45" id="qGO-VD-PaN" customClass="AddTagTableViewCell" customModule="BeanCount" customModuleProvider="target">
+                                <frame key="frameInset" minY="77" width="375" height="45"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qGO-VD-PaN" id="880-Dh-qPW">
+                                    <frame key="frameInset" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="orC-TN-GGW">
+                                            <frame key="frameInset" minX="16" minY="4" width="343" height="41"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QYo-dV-pNH">
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KzD-uD-zpK">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="KzD-uD-zpK" secondAttribute="height" multiplier="1:1" id="yHf-cy-3qy"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="KzD-uD-zpK" secondAttribute="bottom" id="8mZ-Wq-uYx"/>
+                                                <constraint firstAttribute="height" constant="36" id="UkC-Fj-AtD"/>
+                                                <constraint firstItem="KzD-uD-zpK" firstAttribute="centerX" secondItem="QYo-dV-pNH" secondAttribute="centerX" id="Y9C-LX-KwT"/>
+                                                <constraint firstItem="KzD-uD-zpK" firstAttribute="top" secondItem="QYo-dV-pNH" secondAttribute="top" id="YIR-S4-vl4"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="orC-TN-GGW" firstAttribute="leading" secondItem="880-Dh-qPW" secondAttribute="leading" constant="16" id="39j-sW-uz4"/>
+                                        <constraint firstAttribute="trailing" secondItem="QYo-dV-pNH" secondAttribute="trailing" constant="16" id="PKj-Qo-1ZC"/>
+                                        <constraint firstAttribute="trailing" secondItem="orC-TN-GGW" secondAttribute="trailing" constant="16" id="Pmj-33-b4M"/>
+                                        <constraint firstItem="QYo-dV-pNH" firstAttribute="leading" secondItem="880-Dh-qPW" secondAttribute="leading" constant="16" id="cIt-Kr-q1M"/>
+                                        <constraint firstAttribute="bottom" secondItem="orC-TN-GGW" secondAttribute="bottom" constant="4" id="dUC-wI-9uM"/>
+                                        <constraint firstAttribute="bottom" secondItem="QYo-dV-pNH" secondAttribute="bottom" constant="4" id="fRX-hV-gBV"/>
+                                        <constraint firstItem="orC-TN-GGW" firstAttribute="top" secondItem="880-Dh-qPW" secondAttribute="top" constant="4" id="jr5-fK-bWa"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="mainView" destination="QYo-dV-pNH" id="UFV-f7-zSS"/>
+                                    <outlet property="plusImageView" destination="KzD-uD-zpK" id="cI8-BJ-qMy"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4LW-s7-tGd" id="UUX-ug-cXu"/>
+                            <outlet property="delegate" destination="4LW-s7-tGd" id="m33-uz-dxe"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kb0-U5-YB5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5245.6000000000004" y="-925.18740629685169"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Oux-nl-Hjj">
