--- a/BeanCount/Base.lproj/Main.storyboard
+++ b/BeanCount/Base.lproj/Main.storyboard
@@ -541,12 +541,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="j3L-j8-XxW" firstAttribute="leading" secondItem="GIy-Np-DZy" secondAttribute="leadingMargin" id="1Bm-8v-iJj"/>
-                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="leading" secondItem="GIy-Np-DZy" secondAttribute="leading" id="cme-7D-zlS"/>
+                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="leading" secondItem="GIy-Np-DZy" secondAttribute="leading" constant="16" id="cme-7D-zlS"/>
                             <constraint firstItem="j3L-j8-XxW" firstAttribute="trailing" secondItem="GIy-Np-DZy" secondAttribute="trailingMargin" id="i0P-CD-dVd"/>
                             <constraint firstItem="j3L-j8-XxW" firstAttribute="top" secondItem="WxP-yQ-b4g" secondAttribute="bottom" constant="45" id="lao-OY-jxv"/>
-                            <constraint firstAttribute="trailing" secondItem="VT2-wM-tvQ" secondAttribute="trailing" id="otW-7A-1Vj"/>
+                            <constraint firstAttribute="trailing" secondItem="VT2-wM-tvQ" secondAttribute="trailing" constant="16" id="otW-7A-1Vj"/>
                             <constraint firstItem="JDn-eG-aND" firstAttribute="top" secondItem="VT2-wM-tvQ" secondAttribute="bottom" id="tjy-Ke-wUt"/>
-                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="top" secondItem="j3L-j8-XxW" secondAttribute="bottom" constant="8" id="zvr-3z-1Fe"/>
+                            <constraint firstItem="VT2-wM-tvQ" firstAttribute="top" secondItem="j3L-j8-XxW" secondAttribute="bottom" constant="16" id="zvr-3z-1Fe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Add Student" id="LPz-vf-LFG"/>
@@ -565,18 +565,19 @@
             <objects>
                 <tableViewController id="4LW-s7-tGd" customClass="StudentTagsTableViewController" customModule="BeanCount" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="49" sectionHeaderHeight="28" sectionFooterHeight="28" id="VrE-Ag-sro">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="509"/>
+                        <rect key="frame" x="0.0" y="0.0" width="343" height="501"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StudentTagCell" rowHeight="49" id="8Mq-G7-uGx" customClass="StudentTagTableViewCell" customModule="BeanCount" customModuleProvider="target">
-                                <frame key="frameInset" minY="28" width="375" height="49"/>
+                                <frame key="frameInset" minY="28" width="343" height="49"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Mq-G7-uGx" id="xDz-oy-nTr">
-                                    <frame key="frameInset" width="375" height="48"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="8Mq-G7-uGx" id="xDz-oy-nTr">
+                                    <frame key="frameInset" width="343" height="48.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bNQ-ML-sPT">
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bNQ-ML-sPT">
+                                            <frame key="frameInset" width="1000" height="1000"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="41" id="fAB-Nt-lB7"/>
                                             </constraints>
@@ -587,8 +588,8 @@
                                     <constraints>
                                         <constraint firstItem="bNQ-ML-sPT" firstAttribute="top" secondItem="xDz-oy-nTr" secondAttribute="top" constant="4" id="1CS-Jg-r1V"/>
                                         <constraint firstAttribute="bottom" secondItem="bNQ-ML-sPT" secondAttribute="bottom" constant="4" id="dzT-oG-UNd"/>
-                                        <constraint firstAttribute="trailing" secondItem="bNQ-ML-sPT" secondAttribute="trailing" constant="16" id="mWX-Bh-xNr"/>
-                                        <constraint firstItem="bNQ-ML-sPT" firstAttribute="leading" secondItem="xDz-oy-nTr" secondAttribute="leading" constant="16" id="uCR-Sf-Wds"/>
+                                        <constraint firstAttribute="trailing" secondItem="bNQ-ML-sPT" secondAttribute="trailing" constant="4" id="mWX-Bh-xNr"/>
+                                        <constraint firstItem="bNQ-ML-sPT" firstAttribute="leading" secondItem="xDz-oy-nTr" secondAttribute="leading" constant="4" id="uCR-Sf-Wds"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -596,10 +597,10 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddTagCell" rowHeight="45" id="qGO-VD-PaN" customClass="AddTagTableViewCell" customModule="BeanCount" customModuleProvider="target">
-                                <frame key="frameInset" minY="77" width="375" height="45"/>
+                                <frame key="frameInset" minY="77" width="343" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qGO-VD-PaN" id="880-Dh-qPW">
-                                    <frame key="frameInset" width="375" height="44"/>
+                                    <frame key="frameInset" width="343" height="44.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="orC-TN-GGW">
@@ -607,37 +608,14 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QYo-dV-pNH">
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KzD-uD-zpK">
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="KzD-uD-zpK" secondAttribute="height" multiplier="1:1" id="yHf-cy-3qy"/>
-                                                    </constraints>
-                                                </imageView>
-                                            </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="KzD-uD-zpK" secondAttribute="bottom" id="8mZ-Wq-uYx"/>
-                                                <constraint firstAttribute="height" constant="36" id="UkC-Fj-AtD"/>
-                                                <constraint firstItem="KzD-uD-zpK" firstAttribute="centerX" secondItem="QYo-dV-pNH" secondAttribute="centerX" id="Y9C-LX-KwT"/>
-                                                <constraint firstItem="KzD-uD-zpK" firstAttribute="top" secondItem="QYo-dV-pNH" secondAttribute="top" id="YIR-S4-vl4"/>
-                                            </constraints>
-                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="orC-TN-GGW" firstAttribute="leading" secondItem="880-Dh-qPW" secondAttribute="leading" constant="16" id="39j-sW-uz4"/>
-                                        <constraint firstAttribute="trailing" secondItem="QYo-dV-pNH" secondAttribute="trailing" constant="16" id="PKj-Qo-1ZC"/>
                                         <constraint firstAttribute="trailing" secondItem="orC-TN-GGW" secondAttribute="trailing" constant="16" id="Pmj-33-b4M"/>
-                                        <constraint firstItem="QYo-dV-pNH" firstAttribute="leading" secondItem="880-Dh-qPW" secondAttribute="leading" constant="16" id="cIt-Kr-q1M"/>
                                         <constraint firstAttribute="bottom" secondItem="orC-TN-GGW" secondAttribute="bottom" constant="4" id="dUC-wI-9uM"/>
-                                        <constraint firstAttribute="bottom" secondItem="QYo-dV-pNH" secondAttribute="bottom" constant="4" id="fRX-hV-gBV"/>
                                         <constraint firstItem="orC-TN-GGW" firstAttribute="top" secondItem="880-Dh-qPW" secondAttribute="top" constant="4" id="jr5-fK-bWa"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="mainView" destination="QYo-dV-pNH" id="UFV-f7-zSS"/>
-                                    <outlet property="plusImageView" destination="KzD-uD-zpK" id="cI8-BJ-qMy"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
