--- a/BeanCount/Base.lproj/Main.storyboard
+++ b/BeanCount/Base.lproj/Main.storyboard
@@ -534,7 +534,7 @@
                             </textField>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VT2-wM-tvQ">
                                 <connections>
-                                    <segue destination="4LW-s7-tGd" kind="embed" id="Plr-ZY-h7X"/>
+                                    <segue destination="4LW-s7-tGd" kind="embed" identifier="LoadTableView" id="Plr-ZY-h7X"/>
                                 </connections>
                             </containerView>
                         </subviews>
